fix: Update vercel.json to use correct install and build commands
- Change installCommand from 'npm run install:all' to 'cd ai_formula && npm install'
- Update buildCommand to 'cd ai_formula && npm run build'
- Update devCommand to 'cd ai_formula && npm run dev'
- Fix Vercel deployment issue with missing install:all script

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "cd ai_formula && npm run build",
   "outputDirectory": "ai_formula/dist",
-  "installCommand": "npm run install:all",
-  "devCommand": "npm run dev",
+  "installCommand": "cd ai_formula && npm install",
+  "devCommand": "cd ai_formula && npm run dev",
   "framework": "vite",
   "regions": ["hkg1"],
   "cleanUrls": true,
